[project]
name = "flet-extended-interactive-viewer-example"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet-extended-interactive-viewer",
    "flet>=0.84.0",
]

[dependency-groups]
dev = [
    "flet-cli>=0.84.0",
    "flet-desktop-light>=0.84.0",
    "flet-web>=0.84.0",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "flet-extended-interactive-viewer"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2026 by MyCompany"

[tool.flet.app]
path = "src"

[tool.flet.dev_packages]
flet-extended-interactive-viewer = "../.." # relative path
[tool.uv.sources]
flet-extended-interactive-viewer = { path = "../../", editable = true }
